--- a/SMS/.classpath
+++ b/SMS/.classpath
@@ -9,5 +9,7 @@
 	<classpathentry kind="lib" path="C:/Users/HP/Downloads/mysql-connector-java-8.0.30.jar"/>
 	<classpathentry kind="lib" path="C:/Users/HP/Downloads/junit-jupiter-api-5.12.0-RC2-javadoc.jar"/>
 	<classpathentry kind="lib" path="C:/Users/HP/Downloads/junit-jupiter-api-5.12.0-RC2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/HP/Downloads/junit-platform-console-standalone-1.12.0-RC2-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/HP/Downloads/junit-platform-console-standalone-1.12.0-RC2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
