--- a/SMS/.classpath
+++ b/SMS/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry kind="lib" path="C:/Users/HP/Downloads/junit-jupiter-api-5.12.0-RC2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/HP/Downloads/junit-platform-console-standalone-1.12.0-RC2-javadoc.jar"/>
 	<classpathentry kind="lib" path="C:/Users/HP/Downloads/junit-platform-console-standalone-1.12.0-RC2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/HP/Downloads/lombok.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
