--- a/UMS/src/main/webapp/WEB-INF/web.xml
+++ b/UMS/src/main/webapp/WEB-INF/web.xml
@@ -9,9 +9,25 @@
     <display-name>RegistrationController</display-name>
     <servlet-name>RegistrationController</servlet-name>
     <servlet-class>org.cms.controllers.RegistrationController</servlet-class>
+      <init-param>
+      <param-name>username</param-name>
+      <param-value>root</param-value>
+    </init-param>
+   <init-param>
+      <param-name>password</param-name>
+      <param-value>root</param-value>
+    </init-param> 
+    <init-param>
+      <param-name>driver</param-name>
+      <param-value>com.mysql.jdbc.Driver</param-value>
+    </init-param>
   </servlet>
   <servlet-mapping>
     <servlet-name>RegistrationController</servlet-name>
-    <url-pattern>/RegistrationController</url-pattern>
+    <url-pattern>/RC</url-pattern>
   </servlet-mapping>
+  <context-param>
+    <param-name>admin</param-name>
+    <param-value>admin@presidencyuniversity.in</param-value>
+  </context-param>
 </web-app>
