--- a/PUMS/src/main/resources/application.properties
+++ b/PUMS/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=PUMS
+# Server settings (optional)
+server.port=8087
 
 spring.datasource.url=jdbc:mysql://localhost:3306/umsdb
 spring.datasource.username=root
@@ -14,6 +16,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 # Thymeleaf settings
 spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
 
-# Server settings (optional)
-server.port=8087
+
