--- a/PUMS/src/main/resources/application.properties
+++ b/PUMS/src/main/resources/application.properties
@@ -2,10 +2,10 @@ spring.application.name=PUMS
 # Server settings (optional)
 server.port=8087
 
-spring.datasource.url=jdbc:mysql://localhost:3306/umsdb
+spring.datasource.url=jdbc:mysql://localhost:3306/techtest2
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
