added student view files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ server.port=8085
 
 spring.datasource.url=jdbc:mysql://localhost:3306/exammasterfsdb
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=naher_farhsa
+spring.datasource.password=mySQLroot@123
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
