--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ server.port=8085
 
 spring.datasource.url=jdbc:mysql://localhost:3306/exammasterfsdb
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.username=naher_farhsa
-spring.datasource.password=mySQLroot@123
+spring.datasource.username=root
+spring.datasource.password=uplcuser
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -20,6 +20,10 @@ spring.mvc.view.suffix=.html
 # Optional (for debugging/logging)
 #spring.thymeleaf.cache=false
 #spring.thymeleaf.enabled=true
+jwt.secret=myS3cur3K3yWithR@ndomChar@cter$123456789!
+jwt.expiration=3600000
+
+
 
 
 
