Added Transport Management to PUMS
use run configurations to add the project to first run tms and then pums so it can execute smoothly

--- a/PUMS VERSION 2/TransportManagementSystem/src/main/resources/application.properties
+++ b/PUMS VERSION 2/TransportManagementSystem/src/main/resources/application.properties
@@ -1,11 +1,8 @@
-spring.application.name=PUMS
-# Server settings (optional)
-server.port=8088
-
-spring.datasource.url=jdbc:mysql://localhost:3306/pums
+spring.application.name=TransportManagementSystem
+spring.datasource.url=jdbc:mysql://localhost:3306/tms
 spring.datasource.username=root
 spring.datasource.password=nightfury
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+server.port=8087
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
@@ -18,5 +15,3 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-
-
